--- a/literature.tex
+++ b/literature.tex
@@ -1,14 +1,28 @@
 \sectionWithoutNumber{Спіс скарыстаных крыніц}
 
 \begin{enumerate}[{label=\arabic{*}}]
-    \item Алейников А. А., Билятдинов К. З., Красов А. В., Левин М. В. Контроль, измерение и ин-
-теллектуальное управление трафиком. СПб. : Астерион", 2016.
-    \item Vladyko A., Letenko I., Lezhepekov A., Buinevich M. Fuzzy Model of Dynamic Traffic Man-
-agement in Software-Defined Mobile Networks // Lecture Notes in Computer Science. 2016. Vol. 9870.
+    \item Алейников А. А., Билятдинов К. З., Красов А. В., Левин М. В. Контроль, измерение и интеллектуальное управление трафиком. СПб. : Астерион", 2016.
+    \item Vladyko A., Letenko I., Lezhepekov A., Buinevich M. Fuzzy Model of Dynamic Traffic Management in Software-Defined Mobile Networks // Lecture Notes in Computer Science. 2016. Vol. 9870.
 pp. 561–570.
     \item Летенко И. Д. в программируемых сетях // Системы управления и информационные технологии. 2015. Т. 62. No 4.1. С. 179–184.
     \item Красов А. В., Левин М. В., Цветков А. Ю. Управления сетями передачи данных с изменяющейся нагрузкой // Всероссийская научная конференция по проблемам управления в технических системах. Санкт-Петербург, 2015. С. 141–146.
     \item Красов А. В., Левин М. В. Возможности управления трафиком в рамках концепции
-SDN // IV Международная научно-техническая и научно-методическая конференция «Актуаль-
-ные проблемы ин
+SDN // IV Международная научно-техническая и научно-методическая конференция «Актуальные проблемы инфокоммуникационных систем>>
+    \item Software-Defined Networking. Cisco [Electronic resource]. – Mode of access : \\
+    https://www.cisco.com/c/en/us/solutions/software-defined-net/overview.html. – Date of access : \\
+    08.03.2020.
+    \item Introduction to SDN. Networklessons [Electronic resource]. – Mode of access : \\
+    https://network\-lessons.com/cisco/ccna-routing-switching-icnd2-200-105/introduction-to-sdn-softwa\-re-defined-net. – Date of access : 09.03.2020.
+    \item Examples of Network Programmability and SDN. Ciscopress [Electronic resource]. – Mode of access : https://www.ciscopress.com/articles/article.asp?p=2995354\&seqNum=3. – Date of access : 09.03.2020.
+    \item CCNA 1: Routing \& Switching: Databook / Cisco Systems Inc. – Cisco Press, 2014.
+    \item CCNA 2: Routing \& Switching: Databook / Cisco Systems Inc. – Cisco Press, 2015.
+    \item Cisco CCNP Certification Cisco Internetworking Troubleshooting CIT Exam : Databook / Cisco Systems Inc. – Cisco Press, 2019.
+    \item Cisco CCNP/CCIP Certification Building Scalable Cisco Internetworks : Databook / Cisco Systems Inc. – Cisco Press, 2018.
+    \item CCNP 1: Remote Access Companion Guide : Databook / Cisco Systems Inc. – Cisco Press, 2017.
+    \item CCNP 2: Remote Access Companion Guide : Databook / Cisco Systems Inc. – Cisco Press, 2019.
+    \item Кравченко, Ю. Р. Методические указания по выполнению экономического раздела дипломных работ для студентов специальности 1-45 01 02 – Инфокоммуникационные сети (по направлениям) / Ю. Р. Кравченко, И. А. Демидович. – Минск : Учреждение образования «Белорусская государственная академия связи», 2019. – 22 с.
+    \item Галюжин, С. Д. Методические указания к выполнению раздела «Охрана труда» для студентов технических специальностей / С. Д. Галюжин, С. В. Матусевич, В. И. Мрочек – Могилев : Государственное учреждение высшего профессионального образования «Белорусско-Российский университет», 2010. – 25 с.
+    \item СанПиН «Гигиенические требования к видеодисплейным терминалам, электронно-вычислительным машинам и организации работы». – Минск: Постановление Министерства здравоохранения Республики Беларусь 10.11.2000.
+
+   
 \end{enumerate}
