--- a/report.tex
+++ b/report.tex
@@ -35,7 +35,8 @@
     \include{appendixE}
     \setcounter{page}{70}
     \include{appendixF}
-    \setcounter{page}{76}
+    \setcounter{page}{75}
+    \include{appendixI}
     \include{appendixJ}
     \setcounter{page}{77}
     \include{appendixG}
