--- a/anatacyja.tex
+++ b/anatacyja.tex
@@ -27,8 +27,8 @@
 У пятым раздзеле паказаны правілы і рэкамендацыі для стварэння
 эрганамічных умоў працы.
 
-Аб'ём тлумачальнай запіскі складае -- аркушаў і змяшчае
--- табліц, -- малюнкаў, -- формул, -- крыніц літаратуры.
+Аб'ём тлумачальнай запіскі складае 60 аркушаў і змяшчае
+7 табліц, 17 малюнкаў, 21 формулу, 17 крыніц літаратуры.
 
 \clearpage
 
@@ -63,5 +63,5 @@
 В пятом разделе показаны правила и рекомендации для создания эргономичных
 условий труда.
 
-Объём пояснительной записки составляет -- листов и содержит
--- таблиц, -- рисунком, -- формул, -- источников литературы.
+Объём пояснительной записки составляет 60 листов и содержит
+7 таблиц, 17 рисунков, 21 формулу, 17 источников литературы.
