--- a/part2.tex
+++ b/part2.tex
@@ -66,7 +66,7 @@
     \item даўжыня маршруту;
     \item надзейнасць;
     \item затрымка;
-    \item шырыня паласа прпускания;
+    \item паласа прапускання;
     \item нагрузка;
     \item кошт сувязі.
 \end{enumerate}
