--- a/literature.tex
+++ b/literature.tex
@@ -1,13 +1,13 @@
 \sectionWithoutNumber{Спіс скарыстаных крыніц}
 
 \begin{enumerate}[{label=\arabic{*}}]
-    \item Алейников А. А., Билятдинов К. З., Красов А. В., Левин М. В. Контроль, измерение и интеллектуальное управление трафиком. СПб. : Астерион", 2016.
-    \item Vladyko A., Letenko I., Lezhepekov A., Buinevich M. Fuzzy Model of Dynamic Traffic Management in Software-Defined Mobile Networks // Lecture Notes in Computer Science. 2016. Vol. 9870.
+    \item Алейников А. А. Контроль, измерение и интеллектуальное управление трафиком. / Алейников А. А., Билятдинов К. З., Красов А. В., Левин М. В. -- СПб. : Астерион", 2016.
+    \item Vladyko A., Letenko I., Lezhepekov A., Buinevich M. Fuzzy Model of Dynamic Traffic Management in Software-Defined Mobile Networks / Lecture Notes in Computer Science. 2016. Vol. 9870.
 pp. 561–570.
-    \item Летенко И. Д. в программируемых сетях // Системы управления и информационные технологии. 2015. Т. 62. No 4.1. С. 179–184.
-    \item Красов А. В., Левин М. В., Цветков А. Ю. Управления сетями передачи данных с изменяющейся нагрузкой // Всероссийская научная конференция по проблемам управления в технических системах. Санкт-Петербург, 2015. С. 141–146.
-    \item Красов А. В., Левин М. В. Возможности управления трафиком в рамках концепции
-SDN // IV Международная научно-техническая и научно-методическая конференция «Актуальные проблемы инфокоммуникационных систем>>
+    \item Летенко И. Д. в программируемых сетях / Системы управления и информационные технологии. 2015. Т. 62. No 4.1. С. 179–184.
+    \item Красов А. В. Управления сетями передачи данных с изменяющейся нагрузкой / Красов А. В., Левин М. В., Цветков А. Ю. -- Всероссийская научная конференция по проблемам управления в технических системах. Санкт-Петербург, 2015. С. 141–146.
+    \item Красов А. В. Возможности управления трафиком в рамках концепции
+SDN / Красов А. В., Левин М. В. -- IV Международная научно-техническая и научно-методическая конференция «Актуальные проблемы инфокоммуникационных систем>>.
     \item Software-Defined Networking. Cisco [Electronic resource]. – Mode of access : \\
     https://www.cisco.com/c/en/us/solutions/software-defined-net/overview.html. – Date of access : \\
     08.03.2020.
