--- a/part3.tex
+++ b/part3.tex
@@ -16,6 +16,13 @@ GNS3 (графічны сеткавай сімулятар) -- серада ма
 
 \subsection{Мадэль віртуальнай сеткі}
 
+Mаршрутызатар R1 падключаны да сеткі 10.10.22.0/24 і сеткі 192.168.254.0/24;
+маршрутызатар R2 падключаны да сетак 10.10.22.0/24, 10.10.11.0/24 і сеткі 10.10.33.0/24 (прадстаўленая ў відзе loopback інтэрфейса);
+маршрутызатар R3 падключаны да 10.10.11.0/24 і 192.168.254.0/24.
+
+Знешні кантролер падключаны да кожнага маршрутызатара. Неабходна заўважыць, што кантролер можа падключацца да маршрутызатараў
+як напрамую, так і праз іншыя маршрутызатары.
+
 На малюнку \ref{img: model} прадстаўлена мадэль віртуальнай сеткі з 3 маршрутызатараў і 1 кантролера.
 
 \begin{figure}[h!]
@@ -24,13 +31,6 @@ GNS3 (графічны сеткавай сімулятар) -- серада ма
     \caption{Мадэль віртуальнай сеткі}
     \label{img: model} 
 \end{figure}
-
-З малюнка \ref{img: model} бачым, што маршрутызатар R1 падключаны да сеткі 10.10.22.0/24 і сеткі 192.168.254.0/24;
-маршрутызатар R2 падключаны да сетак 10.10.22.0/24, 10.10.11.0/24 і сеткі 10.10.33.0/24 (прадстаўленая ў відзе loopback інтэрфейса);
-маршрутызатар R3 падключаны да 10.10.11.0/24 і 192.168.254.0/24.
-
-Знешні кантролер падключаны да кожнага маршрутызатара. Неабходна заўважыць, што кантролер можа падключацца да маршрутызатараў
-як напрамую (як праўдстаўлена на малюнку \ref{img: model}), так і праз іншыя маршрутызатары.
 
 У якасці маршрутызатараў выкарыстоўваюцца маршрутызатары мадэлі CSR1000v (Cisco Cloud Services Router 1000V Series)
 з наступнымі параметрамі:
@@ -113,6 +113,7 @@ Successor-а пры яго наяўнасці.
                             label={lst: R2 before/topology},%
                             language=bash]{R2/before/topology.txt}
 
+\vspace{-4\baselineskip}
 \subsubsection{Маршрутызатар R3.}
 
 У лістынгу \ref{lst: R3 before/interfaces} прадстаўлена кароткае апісанне ўключаных інтэрфейсаў на маршрутызатары R3.
@@ -132,6 +133,8 @@ Successor-а пры яго наяўнасці.
 \lstinputlisting[caption={EIGRP тапалогія сеткі на маршрутызатары R3},%
                             label={lst: R3 before/topology},%
                             language=bash]{R3/before/topology.txt}
+
+\vspace{-\baselineskip}
 
 \subsection{Работа алгарытму пры перадачы трафіка}
 
@@ -158,6 +161,8 @@ Successor-а пры яго наяўнасці.
 \lstinputlisting[caption={Лог праграмы алгарытму для маршрутызатара R1},%
                             label={lst: program output},%
                             language=bash]{program_output.txt}
+
+\vspace{-\baselineskip}
 
 \subsection{Параўнанне EIGRP параметраў на маршрутызатарах пасля пераразліку метрыкі}
 
@@ -196,7 +201,7 @@ Successor-а пры яго наяўнасці.
 10.\-10.\-33.\-0/24 метрыка змянілася толькі для 1 маршрута, што
 мы і бачылі ў табліцы EIGRP маршрутаў (лістынг \ref{lst: R1 after/routes}).
 
-\subsubsection{Маршрутызатар 2.}
+\subsubsection{Маршрутызатар R2.}
 
 У лістынгу \ref{lst: R2 after/routes} прадстаўлена табліца
 EIGRP маршрутаў, на якім можам бачыць, што для маршруту
